edits to results

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -73,27 +73,26 @@ Our earlier work using the protein, mRNA, lipid and metabolite level information
 \section{Results}
 
 \subsection{Running MODa on \emph{E. coli} proteome}
-Post-translational modifications, in most cases, determine the specific function of the protein. Identifying all the PTMs associated with proteins is limited by both experimental enrichment techniques for PTMs as well as computational limitations. The current dataset is not enriched for any PTMs, however we are interested in identification of different kinds of PTMs, instead of focussing on single PTMs, such as generally done in phosphoproteomics studies, glycosylation studies or acetylation studies. Here, we used a search algorithm MODa, which uses an unrestricted approach to find the post-translational modifications in the data. Our goal is not only to identify the PTMs present in the sample, but also understand the time evolution of these PTMs from exponential phase (3,4,5,6 hours of growth) to long-stationary phases (8,24,48, 168 and 336 hours). OD600 at these 9 time points is given in supplementary information of this article (see Suppl Figure S1). For this analysis, we ran MODa using the parameteres specified in detail in methods section below. In brief, MODa finds multiple short sequence tags and then uses a dynamic programming technique to identify the peptide hits. Use of multiple tags reduces the database size. 
+Post-translational modifications, in most cases, determine the specific function of the protein. Identifying all the PTMs associated with proteins is limited by both experimental enrichment techniques for PTMs as well as computational limitations. The current dataset is not enriched for any PTMs. This means that this dataset is suitable for hunting for different kinds of PTMs, instead of focussing on particular PTMs. Most of the current studies focus on a single PTM coverage, such as generally done in phosphoproteomics studies, glycosylation studies or acetylation studies. 
+
+MODa, a sequence search algorithm is then ran on this mass-spectrometry data to identify the peptides and PTMs associated with them, if any. MODa is a naive based search algorithm that uses an unrestricted approach to find the post-translational modifications in the data. We have mass-spectrometry data at 9 different points of the OD600 curve. So, we have 9 sets of peptide lists, that represent proteins during early exponential phase (3,4,5,6 hours of growth) to long-stationary phases (8,24,48, 168 and 336 hours). OD600 at these 9 time points is given in supplementary information of this article (see Suppl Figure S1). 
+
+The parameters used with MODa are described in the methods section of the paper. In brief, MODa uses multiple short sequence tag information in the spectra along with a dynamic programming approach to identify the peptide hits along with their protein identifiers. The use of multiple tags reduces both the database size and the false positives. Using this MODa output, we asked the following questions: (a) How much of the proteome is modified? (b) How do these modifications change over time? (c) Is there any biological relevance associated with the temporal change of a particular PTM? (c) Can we find any novel modifications in this \emph{E. coli} data? 
 
 %The mass-spectrometry data gathered at the 9 time points is then searched for PTMs using MODa, a naive based spectral alignment search algorithm, for peptide identifications. At each of these 9 time points, we gathered data for 3 biological replicates. Unlike most of the other peptide identification search algorithms, MODa requires range of mass for PTM identification. So, for our analysis we used a range of -200 to 200 Da which is typical to this search engine. MODa is a multi-blind algorithm i.e., there is no restriction on the  number of PTMs identified on a single peptide. However previous studies have shown better sensitivity of the algorithm with the use of 1 mod per peptide. We used 1 mod per peptide for most of the analysis, however we compared our results with using 2 mods per peptide too.
-
-We asked the following questions using our MODa output on peptide identifications:
-(a) How much of the proteome is modified? (b) How do these modifications change over time and is there any biological relevance associated with this temporal change? (c) Can we find any novel modifications? 
 
 %(d) Can we explain the pattern of the PTMs over time using other diverse kinds of data such as RNA-seq? In this project, we also collected mRNA via RNA-seq, lipid profiles and metabolic fluxes using mass-spec methods. We went back and compared our proteomics data with these other kinds of data for further validation, wherever necessary.
 
 \subsection{Modified \emph{E. coli} proteome}
-First, we are interested in understanding how much of the proteome is modified at each of the 9 time points i.e., from exponential to long-stationary phases? For this, we calculated the percentage of the total number of modified peptides in the peptide spectral matches (PSMs) list. We used 1 standard error to plot the variation within 3 biological replicates.
+First, we are interested in identifying the amount of proteome modified. Since we have data at each of the 9 time points i.e., from exponential to long-stationary phases, we plotted the total frequency of all PTMs at each of these time points. For this, we simply calculated the percentage of the total number of modified peptide spectral matches (PSMs) at each time point. We used 1 standard error to plot the variation within 3 biological replicates.
 
-Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time on the x-axis. As it can be seen, the number of modified spectra is ~30\% at all the time points. The ~30\% of protein getting modified is in agreement with some of the previous studies (Cite papers which show the same numbers). However previous studies did not look at the temporal change or look at the change in each of the specific PTMs of interest. Our analysis, as shown below, points to specific PTMS that increase/decrease or remain constant over time.
+Figure~\ref{fig:ModifiedPTM} shows the total percent of the peptide-spectral matches on the y-axis and the time from OD600 plot on the x-axis. It is clear that the amount of spectra that is modified stays approx. at 30\% during all the phases of the growth. This itself is an interesting result. The ~30\% of protein getting modified is in agreement with some of the previous studies (Cite papers which show the same numbers). However these previous studies looked at a "snapshot" of the proteome, instead of looking at different phases during the growth. We next looked at few individual PTMs to see if there is any temporal change in the PTM counts. 
 
 %However note that a modification could be a mutation or a post-translational modification.
 \subsection{Mapping mass-shifts to post-translational modifications}
-To look at the specific PTMs, we need to convert the mass-shifts outputted by MODa to the PTMs of interest i.e., +16Da is most likely the oxidation. For this conversion, we used UNIMOD database that lists the PTMs along with their masses in daltons. We looked only at handful of well known PTMs. In this study, we limited our analysis to few post-translational modifications and did not investigate mutations, although this is a possibility with MODa output.
-%MODa outputs not only the mass-shifts, but also the amino-acids on which this mass-shift occurs. We focussed not only on the most common PTM-amino acid combinations, but also on the PTMs irrespective of the amino acid. 
-%To understand what kinds of PTMs (or mutations) are present in the sample, we plotted the frequency of the mass-shifts. MODa program outputs the frequency of mass-shifts in intervals of 1Da, along with the amino acid on which this mass-shift occurs.
-%Along with the amino acids, it also calculates the N-term and C-term mass-shifts. 
-Figure~\ref{fig:PTMinDalton} shows the mass-shift frequency matrix. (A) shows the distribution at 3 hours and (B) at 24 hours. We did not plot the error bars as this makes the figure a bit clumsy, with error bars appearing at each bin. These are the means of the 3 biological replicates. The error bars indicate 1 standard error. It is clear that +1 Da peak is the most frequent one. However this +1 Da modification seems to be 13C peak-picking as it seems to be randomly occuring on all the amino acids, as shown in the profile (Suppl Figure S5). At both 3 and 24 hours, next frequent modification seems to be the bin at +16Da. 16Da indicates oxidation and cysteine and methionine are the 2 most frequent amino acids that are oxidized. However, the sample is treated in a way to cap cysteines and hence we dont expect to see Cys oxidized. A look at profile (Suppl Figure S6) shows majority of oxidations on methionine which is expected. Similarly, we mapped other frequent and known mass-shifts and looked at their temporal analysis. In particular, we looked at  acetylation, oxidation, phosphorylation, carboxylation and nitrosylation in depth.
+MODa outputs mass-shifts or integer masses in the peptide hits. We then converted these mass-shifts to PTMs that are manually well curated. For example, we know that +16 Dalton shift on any amino acid is most likely the oxidation. We looked at the UNIMOD PTM list, and did see that this is oxidation, previously shown to occur on few amino acids such as cysteine, methionine etc. Apart from looking at the frequently occuring mass-shifts, we also focussed on mass-shifts that mapped to well known PTMs, such as phosphorylation, nitrosylation etc. However, we did not investigate into mutations and this will be a topic we will look in the future as this is a possibility with MODa output.
+
+Even though the total amount of modified proteome is mostly constant ~30\%, individual PTM abundances could be different. So, we plotted the frequency of different mass-shifts from the MODa output. Figure~\ref{fig:PTMinDalton} shows this mass-shift frequency. For simplicity, we looked only at 2 time points. (A) shows the mass-shift frequency at 3 hours, while (B) shows the frequency at 24 hours. We did not plot the error bars as this makes the figure a bit clumsy, with these bars appearing at each bin. The height of the bins is the average count of the mass-shifts for the 3 biological replicates used in the study. It is clear that +1 Da peak is the most frequent one. However this +1 Da modification seems to be 13C peak-picking as it seems to be randomly occuring on all the amino acids, as shown in the profile (Suppl Figure S5). At both 3 and 24 hours, next frequent modification seems to be the bin at +16 Dalton. 16 Dalton (shown as +16 Da in figure) indicates oxidation. 2 frequently oxidized amino acids are the cysteine and methionine. However, the sample is treated in a way that caps cysteines and hence we don't expect to see Cys oxidized. A look at profile (Suppl Figure S6) shows majority of oxidations on methionine which is expected. Next thing, we analyzed are the temporal changes of few interesting PTMs, in acetylation, oxidation, phosphorylation, carboxylation and nitrosylation.
 
 \subsection{N-term protein acetylations are frequent in \emph{E. coli}}
  
@@ -112,13 +111,9 @@ Out of 3919 total acetylations at all 9 time points combined, 3373 (86\%) of the
 
 \subsection{\emph{E. coli} Phosphorylations, carboxylations, nitrosylations and other PTMs}
 
-Next we analyzed other PTMs that were previously shown to be key in E. coli. In particular, we looked at phosphorylation, carboxylation, nitrosylation and oxidation. As mentioned earlier, a key point to note in this analysis is that there is no enrichment done for any of these PTMs, hence the coverage will be smaller than expected. Typical studies that identify phosphopeptides are generally enriched for phosphorylations using enrichment techniques such as IMAC, TiO2 etc. However as we mentioned early, our goal here is to identify different kinds of PTMs in this proteomics data and look at how they change over time. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. Here, we counted the phosphorylations on Serine, Threonine and Tyrosine only as they seem to be well known amino acids that get phosphorylated \cite{Maceketal2008}. There are 2 interesting observations seen in this curve. First, the number of phosphorylations seem to be small as expected, as these are not enriched for phosphorylations and moreover, the number of phosphorylations seem to be comparatively lower in E. coli. Second, and probably an interesting observation is that there is an increase of the number of phosphorylations from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
+Few PTMs in \emph{E. coli} have been shown to be key in previous studies (Cite those studies). In particular, we looked at phosphorylation, carboxylation, nitrosylation and oxidation. First, we looked at the phosphorylations in \emph{E. coli}. Most of the studies that looked at phosphoproteome involved enriching the sample for this PTM using techniques such as IMAC, TiO2 and then running mass-spectrometry on the sample. Figure~\ref{fig:Phos} shows the phosphorylations at different points of the growth curve. We considered only the phosphorylations on serine, threonine and tyrosine, as these are well known amino acids that get phosphorylated in most species including \emph{E. coli} \cite{Maceketal2008}. The number of phosphorylations seem to be small. This is expected, as the sample is not enriched for phosphorylations. An interesting observation is that there is an increase of the number of phosphorylations from exponential to stationary phases. Such pattern is also previously shown in phosphoproteomic studies \cite{Soaresetal2013} probably pointing to a role of phosphorylation in later stages of the growth cycle.
 
-Similarly we looked at the carboxylations (See Suppl Figure S2)and nitrosylations (See Suppl Figure S3), as they are shown in the past to be important in E. coli. Like, phosphorylations, carboxylations seem to increase during the later stages of the growth indicating a likely role of this PTM in late stationary phase. (There are studies linking cellular growth rate to carboxylases, may be related to what is shown here?) A previous study in S-nitrosylation in E.coli \cite{Sethetal2012}. We found succinylation modification frequently at different phases, all on the succinyl-transferase. This was previously characterized in a study where the authors were analyzing data for succinylation. Here we would like to point out that this large-scale study to analyze different PTMs without any enrichment was able to identify and characterize widely occuring PTMs generally identified in E. coli. 
-
-An artifact caused by sample preparation and mass-spectrometry analysis is the adduct formation with Na and K. Here, we plotted the profiles of Na and K adducts (see Suppl Figure S4). Na and K adducts don't seem to form on H, K and R compared to other amino acids. These are amino acids that have side chains that are basic and carry a small positive charge at physiological pH. This explains why the adducts don't form with these amino acids. We give a general recommendation to include these adducts as variable modifications in the search engines to increase the sensitivity of the peptide identifications. Most of the software have an easy option to include these adducts and hence we recommend this giving a 3-4\% increase in identifications.
-
-Glutamine conversion at n-term of the peptide to pyroglutamate is a well known PTM. This post-translational modification stabilizes the protein to avoid any further n-terminal processing. Suppl Figure 7 shows that this conversion seems to be more or less same at different phases of the growth.
+We then looked at carboxylations (See Suppl Figure S2)and nitrosylations (See Suppl Figure S3). Like, phosphorylations, carboxylations seem to increase during the later stages of the growth indicating a likely role of this PTM in late stationary phase. (There are studies linking cellular growth rate to carboxylases, may be related to what is shown here?) A previous study in S-nitrosylation in E.coli \cite{Sethetal2012} (read this to see if the pattern or the results hold). 
 
 \subsection{Oxidative damage and repair in \emph{E. coli}}
 %\cite{Vogt1995}
@@ -138,14 +133,23 @@ Glutamine conversion at n-term of the peptide to pyroglutamate is a well known P
 %
 %\cite{Davisetal2000}
 %{HIV-2 protease is inactivated after oxidation at the dimer interface and activity can be partly restored with methionine sulphoxide reductase}
-Next, we looked into oxidation of methionine. Oxidation generally occurs frequently on cysteine and methionine. However since cysteine is capped to avoid disulphide bond formation in these experiments, we expect +16Da shift to occur frequently on methionone. Other than cysteine and methionine, there are 8 other amino acids that have been shown to be oxidized although at a lower rate and less frequent. 
+Next, we looked into oxidation of proteins. This is an important PTM as it has been linked to various diseases, along with a primary cause in aging. Oxidation frequently occurs on cysteine and methionine. However in our sample, since cysteine is capped to avoid disulphide bond formation, we expect +16 Dalton oxidation modification to occur primarily on methionone. 
 
-E. coli grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 {CiteGonzalez-Flecha B, Demple B (1995) Metabolic sources of hydrogen peroxide in aerobically growing Escherichia coli. J Biol Chem 270: 13681–13687}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc or through reductases that reduce protein to its original non-oxidized state. Here, we investigated the levels of oxidation at different phases of growth.
+\emph{E. coli} grown aerobically react with oxygen in the atmosphere producing reactive oxygen species such as H2O2 {CiteGonzalez-Flecha B, Demple B (1995) Metabolic sources of hydrogen peroxide in aerobically growing Escherichia coli. J Biol Chem 270: 13681–13687}. Targets for these ROS are generally proteins and lipids, that get oxidized. This oxidized state affects the protein structure and hence results in changes in its function leading to disturbances in the metabolism. Bacteria have genetic systems that responds to this oxidative stress through oxyR, SoxXY etc or through reductases that reduce protein to its original non-oxidized state. Here, we investigated the levels of oxidation at different phases of growth.
 
-Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. This result seemed strange as we expected oxidative stress to increase under these glucose-starvation conditions in \emph{E. coli}. May be the bacterial genetic systems that respond to oxidative stress are acting to bring back the oxidation levels down. To validate this, we looked into literature to look into reduction systems that fix methionine sulfoxide back to methionine. We found that there is a class of sulfoxide reductases previously characterized that fix MetSO back to Met. In \emph{E. coli}, these are MsrA and yeaA. Since MODa outputs the peptide and hence the protein level information, we plotted the protein abundances of these reductases in Figure~\ref{fig:MsrAB}. The protein levels of these reductases seem to go down during the exponential phase, however there is a sudden increase in these levels during stationary and long-stationary phases that might explain the lower levels of methionine oxidation levels. We also did Sequest searches to validate this result. However since sequest allows us to specifically name the variable post-translational modifications expected, we listed methionine oxidation which is typical of these searches. The result is shown as a fig:OxidationProfileFig (see Suppl Figure 7).
+Figure~\ref{fig:Oxid} (A) shows the global oxidation levels occuring on all amino acids. The oxidations seem to go down from exponential to stationary to long stationary phases. Figure~\ref{fig:Oxid} (B) shows the oxidation occuring on methionine only. The pattern seems to be same as the global oxidation level i.e., goes down from exponential to stationary phases. This result seemed interesting as we expected oxidative stress to increase under these glucose-starvation conditions in \emph{E. coli} at later stages of the growth. May be the bacterial genetic systems that respond to oxidative stress are acting to bring back the oxidation levels down to protect \emph{E. coli} against this oxidative damage. To see if this is the case, we looked into literature and found a class of reductases that fix methionine sulfoxide (MetSO) back to methionine (Met).  In \emph{E. coli} REL606 strain, these are MsrA and yeaA. Since MODa also outputs the peptide and hence the protein level information, we plotted the protein abundances of these reductases in Figure~\ref{fig:MsrAB}. There seems to be a sudden increase in these levels during stationary and long-stationary phases that might explain the lower levels of methionine oxidation levels. To double-check our result, we plotted the previous Sequest search results that were used to plot the protein abundances in our preceding paper using this dataset. We  could not use the same search results for our multiple PTM analysis here, as the only variable modification used in that study is oxidation methionine which is typical. The Sequest result is shown as a fig:OxidationProfileFig (see Suppl Figure 7).
+
+\subsection{Other PTMs and artifacts}
+
+We then investigated few frequently occuring modifications on a particular site in 1 or few proteins. Our analysis revealed 2 such modifications in succinylation and pyroglutamate formation. Succinylation modification seem to frequently occur at different phases of \emph{E. coli} growth, interestingly all on the succinyl-transferase. However, we were not able to find any substrates for this transferase. This was also previously identified in another study, however in that study the authors enriched the sample for this PTM. Here we would like to point out that this large-scale study to analyze different PTMs without any enrichment was able to identify and characterize not only widely occuring PTMs, but other low-abundant PTMs, such as succinylation.  Next, we looked at pyroglutamate formation from n-glutamine. This is a well known PTM that stabilizes the protein to avoid any further n-terminal processing. Interestingly, the PTM levels of this conversion seems to be more or less same at different phases of the growth (see Suppl Figure 7).
+
+One of the artifacts caused by mass-spectrometry instrumentation is the Na and K adduct formation. The frequency of this mass-shift seems to be 3-4\%, combined. To validate if these are really adducts, or if it is the PTM on any particular amino acid, we plotted the profiles of Na and K adducts (see Suppl Figure S4). This mass-shift seems not to occur on H, K and R but seemed to occur randomly on all the other amino aicds. Histidine, lysine and arginine are amino acids that have side chains that are basic and carry a small positive charge at physiological pH. This explains that this mass-shift is indeed adducts from Na and K, as these adducts don't form on basic amino acids at physiological pH. Since including these Na and K adducts seem to increase the sensitivity of the search, we give a general recommendation to include these adducts as variable modifications in search algorithms that limit the number of PTMs as variable modifications. 
+%Most of the software, such as Proteome Discoverer (please double check) have an easy option to include these adducts and hence we recommend this giving a 3-4\% increase in identifications.
 
 \subsection{Novel phosphoserinegluconylation on ribosomal protein S6}
-Earlier, we analyzed the PTMs that are less than 200 daltons. In another run, we changed this search range to include upto 300 daltons. The trend of the PTMs remains same (not shown), however including a larger range provided insights into larger PTMs. For example, a +258 Da shift on serine is found consistently at all time points of the growth curve. When we looked into into literature, this seemed to be a combination of both phosphorylation and gluconylation on Serine. However it was not shown in literature to occur frequently on the ribosomal protein S6 in E. coli.
+Finally, we did an analysis where we changed the mass-range to include large PTMs upto 300Da, compared to 200Da in the earlier run. The trend of the PTMs remained same (not shown), however including a larger range provided information on other larger PTMs. For example, a +258 Da shift on serine is found consistently at all time points of the growth curve. When we looked into into literature, this seemed to be a combination of both phosphorylation and gluconylation on Serine. However it seems to form on the ribosomal protein S6 very frequently.
+
+To summarize, MODa is useful not only to understand known PTMs very well, but can unravel new PTMs that have biological relevance.
 
 \section{Discussion}
 
